# linglong-knowledge

./: .gitignore  .knowledge.example.yml  .linglong.example.yaml  .linglong.yaml.example  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.claude/: settings.json
.claude/rules/: api-design.md  code-style.md  docs-sync.md  privacy.md  security.md  testing.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
deploy/: linglong-mcp.service  nginx.conf
docs/: PROJECT_OVERVIEW.md  api.md  architecture.md  config.md  development.md  doc-map.yaml  knowledge.md  migration.md  modules.md  operations.md  roadmap.md  rules.md  testing.md
docs/00-roadmap/: v0.3.md  v1.0.md
docs/30-development/: agent-orchestration.md  tech-debt.md  workflow.md
docs/40-testing/: strategy.md
docs/50-operations/: release-process.md
docs/agents/: 01-onboarding.md  claude-code.md  openclaw.md
docs/composer/: README.md  image-assets.md  templates.md
docs/composer/design/: 00-overview.md  01-pipeline.md  02-quality-lint.md  03-review-flow.md  04-output-log.md
docs/core/: config.md
docs/design/: 00-overview.md  01-data-model.md  02-directory-structure.md  03-write-path.md  04-search.md  05-lint.md  06-agent-integration.md  07-update-path.md  08-init-and-concurrency.md  10-sync-adapters.md
docs/dispatch/: README.md  blog-style.md
docs/ingest/: README.md
docs/ingest/design/: 00-overview.md  01-data-sources.md  02-agent-pipeline.md  03-dedup.md  04-cache.md  06-mcp.md  (+1 more)
docs/knowledge/: README.md  llm-wiki-reference.md  sync-adapters.md
docs/plans/: claude-code-sync-adapter.md  multi-agent-orchestration.md  vector-search.md
docs/references/: claude-mem.md  gap-analysis.md  industry-trends.md  llm-wiki-community.md  llm-wiki-reference.md  memgpt.md
journal/: 2026-05-12.md  2026-05-13.md  2026-05-14.md  2026-05-15.md  2026-05-16.md  2026-05-18.md  2026-05-19.md  2026-05-20.md  2026-05-21.md  2026-05-22.md  2026-05-23.md  2026-05-25.md  2026-05-26.md  2026-05-27.md  2026-05-28.md  README.md
plans/: 2026-05-14-knowledge-design.md
scripts/: doc-check.py  install-hooks.sh
scripts/hooks/: pre-commit
src/linglong/: __init__.py  __main__.py  cli.py
tests/: test_cli.py
tests/composer/: __init__.py  test_blog_template.py  test_composer.py  test_composer_dispatch.py  test_distiller.py  test_draft.py  test_image_pipeline.py  test_state.py
tests/core/: __init__.py  test_config.py  test_models.py  test_yaml_config.py
tests/dispatch/: test_dispatch_manager.py  test_integration.py  test_oss_uploader.py  test_publishers.py
tests/ingest/: __init__.py  test_adapters.py  test_agent.py  test_aihot.py  test_arxiv.py  test_brief_history.py  test_dedup.py  test_executor.py  test_feedback.py  test_filter.py  test_github.py  test_history.py  test_integration.py  test_interpreter.py  test_package.py  test_rss.py  test_templates.py  test_verification.py  test_web_search.py
tests/integration/: test_full_pipeline.py  test_knowledge_e2e.py
tests/knowledge/: __init__.py  test_claude_code_sync.py  test_codex_sync.py  test_embeddings.py  test_indexer.py  test_init.py  test_lint.py  test_lint_schedule.py  test_lock.py  test_openclaw_sync.py  test_review.py  test_store.py  test_wikilinks.py
tests/mcp/: test_mcp_server.py
tests/reviewer/: test_reviewer.py
(+124 files in other folders)
