[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "linglong-knowledge"
version = "0.9.0"
description = "Personal knowledge management platform"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "王鑫", email = "xinovate@example.com" }
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "requests>=2.31",
    "pyyaml>=6.0",
    "mcp>=1.0",
]

[project.scripts]
linglong = "linglong.cli:main"
ll-knowledge-mcp = "linglong.mcp:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]
knowledge = [
    "sqlite-vec>=0.1.0",
    "sqlean.py>=3.45",
    "markdown>=3.5",
    "python-frontmatter>=1.0",
    "schedule>=1.2",
]
server = [
    "redis>=5.0",
    "starlette>=0.27",
    "uvicorn>=0.24",
]
all = [
    "linglong[dev,knowledge,server]",
]

[tool.hatch.build.targets.wheel]
packages = ["src/linglong"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
